# savdhaanai

./: .env.example  .gitignore  CLAUDE.md  Makefile  README.md  alembic.ini  pyproject.toml
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 21856d8e169b_initial_schema_all_11_tables.py  4221bd19a9ea_add_foreign_key_constraints_to_all_.py
docs/: API_DESIGN.md  ARCHITECTURE.md  DATABASE_SCHEMA.md  DEPLOYMENT.md  LIMITATIONS.md  MVP_SCOPE.md  PRODUCT_VISION.md  PROGRESS.md  ROADMAP.md  SECURITY.md  THREAT_INTEL.md
infra/docker/: Dockerfile  docker-compose.yml
scripts/: create_test_api_key.py  load_threat_feeds.py  seed_scam_taxonomy.py
src/: main.py
src/api/: deps.py
src/api/middleware/: error_handler.py  logging.py  rate_limiter.py  request_id.py
src/api/routes/: auth.py  card.py  health.py  report.py  scan.py
src/api/schemas/: auth.py  card.py  common.py  report.py  scan.py
src/core/: config.py  constants.py  database.py  exceptions.py  security.py
src/models/: abuse.py  base.py  report.py  scam_card.py  scan.py  user.py
src/services/: abuse_detector.py  action_engine.py  classifier.py  entity_extractor.py  ocr_service.py  report_service.py  scam_card.py  scan_service.py  threat_intel.py
src/utils/: image_utils.py  phone_parser.py  text_sanitizer.py  url_parser.py
src/workers/: analytics.py  celery_app.py  threat_check.py
tests/: conftest.py
tests/fixtures/: scam_messages.json
tests/integration/: test_auth.py  test_classifier_llm.py  test_entity_extractor_llm.py  test_health.py  test_honest_messaging.py  test_scan_pipeline_llm.py
tests/unit/: test_action_engine.py  test_constants.py  test_phone_parser.py  test_rate_limiter.py  test_security.py  test_text_sanitizer.py  test_url_parser.py
web/: package-lock.json
web/src/app/: layout.tsx  page.tsx
web/src/app/auth/: page.tsx
web/src/app/card/[id]/: page.tsx
web/src/app/scan/[id]/: page.tsx
web/src/components/: navbar.tsx  risk-badge.tsx  risk-meter.tsx
web/src/lib/: api.ts
